src/objects/Conversion_Details__c/Conversion_Details__c.object-meta.xml
<CustomObject>
    <label>Conversion Detail</label>
    <nameField>
        <displayFormat>CD-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversion Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>