src/objects/Conversion_Details__c/fields/Conversion_Qty__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Qty__c</fullName>
    <label>Conversion Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>