src/objects/Conversion_Details__c/fields/Conversion_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Remarks__c</fullName>
    <label>Conversion Remarks</label>
    <type>TextArea</type>
</CustomField>