src/objects/Conversion_Details__c/fields/Count_of_More_Conversion_Details_Qty__c.field-meta.xml
<CustomField>
    <fullName>Count_of_More_Conversion_Details_Qty__c</fullName>
    <label>Count of  More Conversion Details Qty</label>
    <summarizedField>More_Conversion_Details__c.New_PN_Disposition_Qty__c</summarizedField>
    <summaryForeignKey>More_Conversion_Details__c.Conversion_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>