src/objects/Conversion_Details__c/fields/Count_of_New_P_N_Disposition_Qty__c.field-meta.xml
<CustomField>
    <fullName>Count_of_New_P_N_Disposition_Qty__c</fullName>
    <description>Count of New P_N Dispostion Qty</description>
    <inlineHelpText>Count of New P_N Dispostion Qty on Conversion Detail</inlineHelpText>
    <label>Count of New P/N Disposition Qty</label>
    <summarizedField>More_Conversion_Details__c.New_PN_Disposition_Qty__c</summarizedField>
    <summaryForeignKey>More_Conversion_Details__c.Conversion_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>