src/objects/Conversion_Details__c/fields/Disposition_Transfer_Detail__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Transfer_Detail__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Disposition/Transfer Detail</label>
    <referenceTo>Disposition_Transfer_Details__c</referenceTo>
    <relationshipLabel>Conversion Details</relationshipLabel>
    <relationshipName>Conversion_Details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>