src/objects/Conversion_Details__c/fields/Legacy_ID_Conversion_Details__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID_Conversion_Details__c</fullName>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>