src/objects/Conversion_Details__c/fields/New_P_N_Balance__c.field-meta.xml
<CustomField>
    <fullName>New_P_N_Balance__c</fullName>
    <label>New P/N Balance - DO NOT USE</label>
    <length>15</length>
    <type>Text</type>
</CustomField>