src/objects/Conversion_Details__c/fields/New_P_N_Balance_New__c.field-meta.xml
<CustomField>
    <fullName>New_P_N_Balance_New__c</fullName>
    <formula>Conversion_Qty__c -  Count_of_More_Conversion_Details_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New P/N Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>