src/objects/Conversion_Details__c/fields/New_P_N_Return_To_Location__c.field-meta.xml
<CustomField>
    <fullName>New_P_N_Return_To_Location__c</fullName>
    <label>New P/N Return To Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>