src/objects/Conversion_Details__c/fields/New_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>New_Part_Number__c</fullName>
    <label>New Part Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>