src/objects/Conversion_Details__c/validationRules/Conversion_Qty_Non_Negative_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Conversion_Qty_Non_Negative_Validation</fullName>
    <active>true</active>
    <description>Conversion Qty Should be greater than zero</description>
    <errorConditionFormula>Conversion_Qty__c &lt;= 0</errorConditionFormula>
    <errorMessage>Conversion Quantity should be greater than zero</errorMessage>
</ValidationRule>