src/objects/Conversion_Details__c/validationRules/More_Conversion_Qty_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>More_Conversion_Qty_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Conversion_Qty__c &lt;  Count_of_More_Conversion_Details_Qty__c</errorConditionFormula>
    <errorMessage>New PN Dispositon Qty should be less than conversion Qty</errorMessage>
</ValidationRule>